force-app/main/default/objects/Film__c/fields/Acteur2__c.field-meta.xml
<CustomField>
    <fullName>Acteur2__c</fullName>
    <label>Acteur2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>