force-app/main/default/objects/Film__c/fields/Acteur3__c.field-meta.xml
<CustomField>
    <fullName>Acteur3__c</fullName>
    <label>Acteur3</label>
    <length>50</length>
    <type>Text</type>
</CustomField>