force-app/main/default/objects/Film__c/fields/Acteur4__c.field-meta.xml
<CustomField>
    <fullName>Acteur4__c</fullName>
    <label>Acteur4</label>
    <length>50</length>
    <type>Text</type>
</CustomField>