force-app/main/default/objects/Film__c/fields/Acteurs__c.field-meta.xml
<CustomField>
    <fullName>Acteurs__c</fullName>
    <label>Acteurs</label>
    <length>50</length>
    <type>Text</type>
</CustomField>