force-app/main/default/objects/Film__c/fields/AfficheFR__c.field-meta.xml
<CustomField>
    <fullName>AfficheFR__c</fullName>
    <label>Affiche FR</label>
    <length>256</length>
    <type>Html</type>
</CustomField>