force-app/main/default/objects/Film__c/fields/AfficheFRURL__c.field-meta.xml
<CustomField>
    <fullName>AfficheFRURL__c</fullName>
    <label>Affiche FR URL</label>
    <type>Url</type>
</CustomField>