force-app/main/default/objects/Film__c/fields/AfficheNL__c.field-meta.xml
<CustomField>
    <fullName>AfficheNL__c</fullName>
    <label>Affiche NL</label>
    <length>256</length>
    <type>Html</type>
</CustomField>