force-app/main/default/objects/Film__c/fields/AfficheNLURL__c.field-meta.xml
<CustomField>
    <fullName>AfficheNLURL__c</fullName>
    <label>Affiche NL URL</label>
    <type>Url</type>
</CustomField>