force-app/main/default/objects/Film__c/fields/Avertissement__c.field-meta.xml
<CustomField>
    <fullName>Avertissement__c</fullName>
    <label>Avertissement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>