force-app/main/default/objects/Film__c/fields/CodeAge__c.field-meta.xml
<CustomField>
    <fullName>CodeAge__c</fullName>
    <label>Code tranche d&#39;âge</label>
    <length>3</length>
    <type>Text</type>
</CustomField>