force-app/main/default/objects/Film__c/fields/CodeCNC__c.field-meta.xml
<CustomField>
    <fullName>CodeCNC__c</fullName>
    <label>Code CNC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>