force-app/main/default/objects/Film__c/fields/CodeDist__c.field-meta.xml
<CustomField>
    <fullName>CodeDist__c</fullName>
    <label>Code distributeur</label>
    <length>5</length>
    <type>Text</type>
</CustomField>