force-app/main/default/objects/Film__c/fields/CodeUGC__c.field-meta.xml
<CustomField>
    <fullName>CodeUGC__c</fullName>
    <label>Code UGC</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>