force-app/main/default/objects/Film__c/fields/DateSortie__c.field-meta.xml
<CustomField>
    <fullName>DateSortie__c</fullName>
    <label>DateSortie</label>
    <type>Date</type>
</CustomField>