force-app/main/default/objects/Film__c/fields/DateSortieFlandre__c.field-meta.xml
<CustomField>
    <fullName>DateSortieFlandre__c</fullName>
    <label>Date de sortie du film Flandre</label>
    <type>Date</type>
</CustomField>