force-app/main/default/objects/Film__c/fields/DateSortieWallonie__c.field-meta.xml
<CustomField>
    <fullName>DateSortieWallonie__c</fullName>
    <label>Date de sortie du film Wallonie</label>
    <type>Date</type>
</CustomField>