force-app/main/default/objects/Film__c/fields/Distributeur__c.field-meta.xml
<CustomField>
    <fullName>Distributeur__c</fullName>
    <label>Distributeur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>