force-app/main/default/objects/Film__c/fields/DureeFilm__c.field-meta.xml
<CustomField>
    <fullName>DureeFilm__c</fullName>
    <description>Indiquer la durée du film en minute</description>
    <label>Durée du film (min)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>