force-app/main/default/objects/Film__c/fields/Genre1__c.field-meta.xml
<CustomField>
    <fullName>Genre1__c</fullName>
    <label>Genre1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>