force-app/main/default/objects/Film__c/fields/Genre2__c.field-meta.xml
<CustomField>
    <fullName>Genre2__c</fullName>
    <label>Genre2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>