force-app/main/default/objects/Film__c/fields/Genre__c.field-meta.xml
<CustomField>
    <fullName>Genre__c</fullName>
    <label>Genre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>