force-app/main/default/objects/Film__c/fields/Interdiction__c.field-meta.xml
<CustomField>
    <fullName>Interdiction__c</fullName>
    <label>Interdiction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Avertissement</fullName>
            </value>
            <value>
                <fullName>Interdit -12 ans</fullName>
            </value>
            <value>
                <fullName>Interdit -16 ans</fullName>
            </value>
            <value>
                <fullName>Interdit -18 ans</fullName>
            </value>
            <value>
                <fullName>Aucune</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>