force-app/main/default/objects/Film__c/fields/Label1__c.field-meta.xml
<CustomField>
    <fullName>Label1__c</fullName>
    <label>Label1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>