force-app/main/default/objects/Film__c/fields/Nationalite__c.field-meta.xml
<CustomField>
    <fullName>Nationalite__c</fullName>
    <label>Nationalité</label>
    <length>255</length>
    <type>Text</type>
</CustomField>