force-app/main/default/objects/Film__c/fields/NbrCopie__c.field-meta.xml
<CustomField>
    <fullName>NbrCopie__c</fullName>
    <label>Nombre de copie</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>