force-app/main/default/objects/Film__c/fields/NombreCopiesVF__c.field-meta.xml
<CustomField>
    <fullName>NombreCopiesVF__c</fullName>
    <label>Nombre de Copies VF</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>