force-app/main/default/objects/Film__c/fields/NombreCopiesVO__c.field-meta.xml
<CustomField>
    <fullName>NombreCopiesVO__c</fullName>
    <label>Nombre de Copies VO</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>