force-app/main/default/objects/Film__c/fields/Origine__c.field-meta.xml
<CustomField>
    <fullName>Origine__c</fullName>
    <label>Origine du film</label>
    <length>20</length>
    <type>Text</type>
</CustomField>