force-app/main/default/objects/Film__c/fields/Realisateur__c.field-meta.xml
<CustomField>
    <fullName>Realisateur__c</fullName>
    <label>Réalisateur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>