force-app/main/default/objects/Film__c/fields/SemaineCinemaSortie__c.field-meta.xml
<CustomField>
    <fullName>SemaineCinemaSortie__c</fullName>
    <label>Semaine Cinéma Sortie</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>