force-app/main/default/objects/Film__c/fields/Synopsis__c.field-meta.xml
<CustomField>
    <fullName>Synopsis__c</fullName>
    <label>Synopsis</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>