force-app/main/default/objects/Film__c/fields/Tech_CodeFilm__c.field-meta.xml
<CustomField>
    <fullName>Tech_CodeFilm__c</fullName>
    <externalId>true</externalId>
    <label>Tech Code Film</label>
    <length>14</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>