force-app/main/default/objects/Film__c/fields/TitreFilm2__c.field-meta.xml
<CustomField>
    <fullName>TitreFilm2__c</fullName>
    <label>Titre du Film 2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>