force-app/main/default/objects/Film__c/fields/TypeFilm__c.field-meta.xml
<CustomField>
    <fullName>TypeFilm__c</fullName>
    <label>Type de film</label>
    <length>20</length>
    <type>Text</type>
</CustomField>