force-app/main/default/objects/Film__c/fields/TypeSpectacle__c.field-meta.xml
<CustomField>
    <fullName>TypeSpectacle__c</fullName>
    <label>Type de Spectacle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FILM</fullName>
            </value>
            <value>
                <fullName>OPERA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>